tests/parser/errors/playerdec_unknown_field.gbl
player p { money: 1$ }
